--- a/templates/picker.html
+++ b/templates/picker.html
@@ -58,6 +58,7 @@
             const picker = new google.picker.PickerBuilder()
                 .addView(google.picker.ViewId.DOCS)
                 .setOAuthToken(accessToken)
+                .setAppId('446670671168')
                 .setDeveloperKey('AIzaSyDQUcI0s5AIP5mHxhS9K25hYqcgAtXqwk')
                 .setCallback(pickerCallback)
                 .build();
